src/scss/_typography.scss
* {
  box-sizing: border-box;
  @include no-select();
  @include font-smoothing(on);
  text-rendering: optimizeLegibility;
  appearance: none;
  outline: 0;
  margin: 0;
  padding: 0;
  border: 0;
  // cursor: none !important;
}

html, body {
  height: 100%;
  width: 100%;
  font: 400 normal 20px/42px 'Montserrat';
}

// #main__content {
// body, header, footer {
//   // padding: 50px;
//   // padding-left: env(safe-area-inset-left); /* Apply safe area */
//   // padding-right: env(safe-area-inset-right);
//   // padding-top: env(safe-area-inset-top); /* Apply safe area */
//   // padding-bottom: env(safe-area-inset-bottom);
//   padding:
//     env(safe-area-inset-left)
//     env(safe-area-inset-right)
//     env(safe-area-inset-top)
//     env(safe-area-inset-bottom);
// }

body.home {
  // padding: 50px;
  // padding-left: env(safe-area-inset-left); /* Apply safe area */
  // padding-right: env(safe-area-inset-right);
  // padding-top: env(safe-area-inset-top); /* Apply safe area */
  // padding-bottom: env(safe-area-inset-bottom);
  padding:
    env(safe-area-inset-left)
    env(safe-area-inset-right)
    env(safe-area-inset-top)
    env(safe-area-inset-bottom);
}

body {
  position: relative;

  &.is-loading * {
    // -webkit-transition: all 0ms 0ms linear !important;
            transition: all 0ms 0ms linear !important;
  }
  &.desktop {
    overflow: hidden;
  }
  &.home {
    overflow: hidden;

    &.temp {
      overflow: scroll;
    }
  }
  // &.dragging {
  //   overflow-x: scroll;
  //   overflow-y: hidden;
  //   will-change: transform;
  // }
}

input, textarea {
  border-radius: 0;
}

a {
  text-decoration: none;
}

@media (max-width: 1024px) {
  * {
    // cursor: none !important;
  //   overflow-y: scroll; /* has to be scroll, not auto */
  //   -webkit-overflow-scrolling: touch;
  }
  // html {
  //   scroll-behavior: smooth;
  // }
  html, body {
    height: auto;
    // height: 100%;
  }
}

